<resources>
    <string name="app_name">Music Player</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="caption">  Only music!!!</string>

    <string name="song1">Song1</string>
    <string name="song2">Song2</string>
    <string name="song3">Song3</string>

</resources>
