<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background2"
tools:context=".MainActivity">


<com.mikhaellopez.circularimageview.CircularImageView
    android:id="@+id/circularImageView"
    android:layout_width="320dp"
    android:layout_height="320dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="56dp"
    android:layout_marginTop="13dp"
    android:layout_marginEnd="56dp"
    android:foregroundGravity="center"
    android:src="@drawable/circular_imgview"
    android:visibility="visible" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="223dp"
        android:text="@string/play"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="223dp"
        android:layout_toEndOf="@+id/btn_play"
        android:text="@string/stop"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="223dp"
        android:layout_toStartOf="@+id/btn_play"
        android:text="@string/pause"
        android:visibility="visible" />

    <Button
        android:id="@+id/song1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@id/song2"
        android:layout_marginBottom="100dp"
        android:onClick="selectSong"
        android:text="@string/song1" />

    <Button
        android:id="@+id/song2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:onClick="selectSong"
        android:text="@string/song2" />

    <Button
        android:id="@+id/song3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@id/song2"
        android:layout_marginBottom="100dp"
        android:onClick="selectSong"
        android:text="@string/song3" />

</RelativeLayout>